Fix imports and logout button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <input type="password" id="password" placeholder="Mật khẩu">
     <button id="register-btn">Đăng Ký</button>
     <button id="login-btn">Đăng Nhập</button>
-    <button id="logout-btn" style="display:none;">Đăng Xuất</button>
   </div>
 
   <div id="game-container" style="display:none;">
@@ -23,6 +22,7 @@
         <li data-section="friends">Friends</li>
         <li data-section="setting">Setting</li>
       </ul>
+      <button id="logout-btn" style="display:none; margin: 10px;">Đăng Xuất</button>  <!-- Di chuyển vào đây -->
     </div>
     <div class="main-content">
       <div id="lobby" class="section active">
