Update gameplay.js, add battle.js, UI + turn system

--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 
   <script type="module" src="firebase.js"></script>
   <script type="module" src="app.js"></script>
+  <script type="module" src="gameplay.js"></script>
 </body>
 </html>
