--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       </div>
       <div id="player" class="section">Thông tin nhân vật (làm sau)</div>
       <div id="friends" class="section">Bạn bè (làm sau)</div>
-      <div id="setting" class="section">Cài đặt (làm sau)</div>
+      <div id="setting" class="section">
+	    <h2>Cài đặt (làm sau)</h2>
+	    <button id="delete-account-btn" class="danger-btn">Xóa tài khoản</button>
+	  </div>
     </div>
   </div>
 
