Update gameplay.js, fix deck select, add logout + delete account logic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Dungeon Mayhem Game</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="auth-container">
@@ -46,13 +47,11 @@
     </div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+ 
 
   <script type="module" src="firebase.js"></script>
   <script type="module" src="app.js"></script>
   <script type="module" src="gameplay.js"></script>
+  <script type="module" src="battle.js"></script>
 </body>
 </html>
